--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('airbnb.csv')"
+    "df = pd.read_csv('airbnb.csv')\n",
+    "amenities = pd.read_json('airbnb_amenities.json').transpose()"
    ]
   },
   {
@@ -29,9 +31,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "amenities[\"rules\"][11508].keys()\n",
+    "#get all the keys of the rules and put them into a set\n",
+    "\n",
+    "def search_cat(category):\n",
+    "    set_cat = set()\n",
+    "    for i in amenities[category].keys():\n",
+    "        try:\n",
+    "            for j in amenities[category][i].keys():\n",
+    "                set_cat.add(j)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return set_cat\n",
+    "\n",
+    "rules = search_cat(\"rules\")\n",
+    "amenities_set = search_cat(\"amenities\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fotos</th>\n",
+       "      <th>superhost</th>\n",
+       "      <th>exp</th>\n",
+       "      <th>amenities</th>\n",
+       "      <th>rules</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11508</th>\n",
+       "      <td>37</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>{'Bathroom': ['Bathtub', 'Hair dryer', 'Cleani...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in: 2:00 PM - ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14222</th>\n",
+       "      <td>52</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'Bathroom': ['Bathtub', 'Hot water'], 'Bedroo...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in: 11:00 AM -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15074</th>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>13</td>\n",
+       "      <td>{'Bedroom and laundry': ['Washer', 'Dryer'], '...</td>\n",
+       "      <td>{'During your stay': ['1 guest maximum']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16695</th>\n",
+       "      <td>16</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>{'Bathroom': ['Hair dryer', 'Hot water'], 'Bed...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in after 2:00 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20062</th>\n",
+       "      <td>39</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>{'Scenic views': ['City skyline view'], 'Bathr...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in: 3:00 PM - ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923195625840585600</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923212677801946624</th>\n",
+       "      <td>19</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7</td>\n",
+       "      <td>{'Scenic views': ['City skyline view', 'Park v...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in after 3:00 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923235409583837696</th>\n",
+       "      <td>28</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9</td>\n",
+       "      <td>{'Bathroom': ['Hair dryer', 'Shampoo', 'Bidet'...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in after 2:00 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923265334032756480</th>\n",
+       "      <td>32</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'Scenic views': ['City skyline view', 'Park v...</td>\n",
+       "      <td>{'Checking in and out': ['Check-in after 4:00 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923267707537096960</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21501 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   fotos superhost  exp  \\\n",
+       "11508                 37      True   13   \n",
+       "14222                 52      True    6   \n",
+       "15074                  6     False   13   \n",
+       "16695                 16      True   13   \n",
+       "20062                 39      True   13   \n",
+       "...                  ...       ...  ...   \n",
+       "923195625840585600   NaN       NaN  NaN   \n",
+       "923212677801946624    19      True    7   \n",
+       "923235409583837696    28      True    9   \n",
+       "923265334032756480    32     False    3   \n",
+       "923267707537096960   NaN       NaN  NaN   \n",
+       "\n",
+       "                                                            amenities  \\\n",
+       "11508               {'Bathroom': ['Bathtub', 'Hair dryer', 'Cleani...   \n",
+       "14222               {'Bathroom': ['Bathtub', 'Hot water'], 'Bedroo...   \n",
+       "15074               {'Bedroom and laundry': ['Washer', 'Dryer'], '...   \n",
+       "16695               {'Bathroom': ['Hair dryer', 'Hot water'], 'Bed...   \n",
+       "20062               {'Scenic views': ['City skyline view'], 'Bathr...   \n",
+       "...                                                               ...   \n",
+       "923195625840585600                                                NaN   \n",
+       "923212677801946624  {'Scenic views': ['City skyline view', 'Park v...   \n",
+       "923235409583837696  {'Bathroom': ['Hair dryer', 'Shampoo', 'Bidet'...   \n",
+       "923265334032756480  {'Scenic views': ['City skyline view', 'Park v...   \n",
+       "923267707537096960                                                NaN   \n",
+       "\n",
+       "                                                                rules  \n",
+       "11508               {'Checking in and out': ['Check-in: 2:00 PM - ...  \n",
+       "14222               {'Checking in and out': ['Check-in: 11:00 AM -...  \n",
+       "15074                       {'During your stay': ['1 guest maximum']}  \n",
+       "16695               {'Checking in and out': ['Check-in after 2:00 ...  \n",
+       "20062               {'Checking in and out': ['Check-in: 3:00 PM - ...  \n",
+       "...                                                               ...  \n",
+       "923195625840585600                                                NaN  \n",
+       "923212677801946624  {'Checking in and out': ['Check-in after 3:00 ...  \n",
+       "923235409583837696  {'Checking in and out': ['Check-in after 2:00 ...  \n",
+       "923265334032756480  {'Checking in and out': ['Check-in after 4:00 ...  \n",
+       "923267707537096960                                                NaN  \n",
+       "\n",
+       "[21501 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
