--- a/base.ipynb
+++ b/base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +139,15 @@
     "df[\"is_min_nights_different\"] = df[\"minimum_nights\"] != df[\"minimum_nights_avg_ntm\"]\n",
     "df[\"name\"] = df[\"name\"].apply(lambda x: len(x.split(\"·\")))\n",
     "df[\"price\"] = df[\"price\"].apply(lambda x: float(x[1:].replace(\",\", \"\")))\n",
-    "\n"
+    "\n",
+    "# Change minimum_nights and maximun_nights to 365 if they are over 365\n",
+    "df[\"maximum_nights\"] = df[\"maximum_nights\"].apply(lambda x: 365 if x > 365 else x)\n",
+    "df[\"minimum_nights\"] = df[\"minimum_nights\"].apply(lambda x: 365 if x > 365 else x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +251,7 @@
     "                'source', 'picture_url', 'host_url', 'host_name',\n",
     "                'host_thumbnail_url', 'host_picture_url', 'neighbourhood',\n",
     "                'neighbourhood_group_cleansed', 'calendar_updated',\n",
-    "                 'calendar_last_scraped','bathrooms_text','host_about'], \n",
+    "                 'calendar_last_scraped','bathrooms_text','host_about','host_has_profile_pic'], \n",
     "            axis=1)\n",
     "df.info()"
    ]
@@ -264,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
