--- a/Airbnb/prediccion.ipynb
+++ b/Airbnb/prediccion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
       " 62  is_max_nights_different                       23477 non-null  bool   \n",
       " 63  is_min_nights_different                       23477 non-null  bool   \n",
       "dtypes: bool(2), float64(16), int64(26), object(20)\n",
-      "memory usage: 11.8+ MB\n"
+      "memory usage: 11.3+ MB\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,22 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "neighbourhood_cleansed\n",
-      "amenities\n",
-      "has_availability\n",
-      "first_review\n",
-      "last_review\n",
-      "instant_bookable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "today = pd.to_datetime('today')\n",
     "\n",
@@ -227,10 +214,12 @@
     "    \n",
     "    \n",
     "    ('fillMissings2',CategoricalImputer(imputation_method='missing',variables=['property_type','room_type'])),\n",
-    "    ('propertyRoomType',CountFrequencyEncoder(encoding_method='frequency',variables=['property_type','room_type'])),\n",
+    "    ('propertyRoomType',CountFrequencyEncoder(encoding_method='frequency',variables=['property_type','room_type','neighbourhood_cleansed'])),\n",
     "\n",
     "\n",
     "    (\"dropFiller\",FunctionTransformer(lambda x: x.drop(['id','name'],axis=1))),\n",
+    "\n",
+    "    ('dropCat',FunctionTransformer(lambda x: x.drop(['amenities','has_availability','first_review','last_review','instant_bookable'],axis=1))),\n",
     "])\n",
     "# Se asume si el host no tiene superhost f o t, se toma como que no es superhost\n",
     "\n",
@@ -238,6 +227,37 @@
     "for col in x2.columns:\n",
     "    if x2[col].dtype == 'object':\n",
     "        print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0065556337682983745\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/feature_engine/encoding/base_encoder.py:255: UserWarning: During the encoding, NaN values were introduced in the feature(s) property_type.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "regr = XGBRegressor(n_estimators=1000, learning_rate=0.05)\n",
+    "regr.fit(x2, y)\n",
+    "print(regr.score(pipe.transform(X_test),y_test))\n"
    ]
   }
  ],
@@ -257,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
